# rSDP

./: .Rbuildignore  .gitignore  404.html  CLAUDE.md  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: constants.R  internal_load.R  internal_resolve.R  internal_validate.R  sdp_browse.R  sdp_catalog_functions.R  sdp_dates.R  sdp_extraction_functions.R  sdp_utility_functions.R  sysdata.rda
articles/: field-site-sampling.html  index.html  pretty-maps.html  sdp-cloud-data.html  wrangle-raster-data.html
data-raw/: SDP_catalog.R  SDP_manifests.R
man/: download_data.Rd  get_sdp_catalog.Rd  get_sdp_metadata.Rd  rSDP-package.Rd  replace_strngs.Rd  sdp_browse.Rd  sdp_extract_data.Rd  sdp_get_catalog.Rd  sdp_get_dates.Rd  sdp_get_metadata.Rd  sdp_get_raster.Rd
news/: index.html
reference/: download_data.html  index.html  rSDP-package.html  replace_strngs.html  sdp_extract_data.html  sdp_get_catalog.html  sdp_get_metadata.html  sdp_get_raster.html
scripts/: update_catalog.sh
stac-gen/: .gitignore  Makefile  README.md  build_stac.py  pyproject.toml  s3-cors.json
stac-gen/lib/: __init__.py  catalog_loader.py  cog_probe.py  metadata_parser.py  s3_manifest.py  slugs.py  stac_builder.py  time_resolver.py
stac-gen/tests/: test_catalog_loader.py  test_slugs.py  test_stac_builder.py  test_time_resolver.py
tests/: testthat.R
vignettes/: field-site-sampling.Rmd  pretty-maps.Rmd  sdp-cloud-data.Rmd  wrangle-raster-data.Rmd
(+5 files in other folders)
