[project]
name = "rsdp-stac-gen"
version = "0.1.0"
description = "Static STAC catalog generator for the RMBL Spatial Data Platform"
requires-python = ">=3.10"
dependencies = [
    "pystac>=1.10",
    "rasterio>=1.3",
    "rio-stac>=0.9",
    "requests>=2.28",
    "lxml>=4.9",
    "stac-validator>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "stac-check>=1.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
